[package]
name = "drawbridge-type"
version = "0.2.2"
authors = ["Profian Inc"]
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/profianinc/drawbridge"
repository = "https://github.com/profianinc/drawbridge"
description = "Drawbridge type definitions."
keywords = ["drawbridge"]

[dependencies]
# Internal dependencies
drawbridge-byte = { workspace = true }
drawbridge-jose = { workspace = true }

# External dependencies
anyhow = { workspace = true, features = ["std"] }
axum = { workspace = true, features = ["headers", "json"], optional = true }
base64 = { workspace = true, features = ["std"] }
futures = { workspace = true, features = ["std"] }
headers = { workspace = true, optional = true }
mime = { workspace = true }
semver = { workspace = true, features = ["serde", "std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
sha2 = { workspace = true, features = ["std"] }
walkdir = { workspace = true }

[dev-dependencies]
async-std = { workspace = true, features = ["attributes", "default"] }
tempfile = { workspace = true }

[features]
default = []
server = ["axum", "futures/async-await", "headers"]
