[package]
name = "drawbridge-type"
version = "0.4.3"
authors = ["Profian Inc", "The Enarx Project Developers"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/enarx/drawbridge"
repository = "https://github.com/enarx/drawbridge"
description = "Drawbridge type definitions."
keywords = ["drawbridge"]

[dependencies]
# Internal dependencies
drawbridge-byte = { workspace = true }
drawbridge-jose = { workspace = true }

# External dependencies
anyhow = { workspace = true, features = ["std"] }
axum = { workspace = true, features = ["headers", "json"], optional = true }
base64 = { workspace = true, features = ["std"] }
futures = { workspace = true, features = ["std"] }
headers = { workspace = true, optional = true }
mime = { workspace = true }
semver = { workspace = true, features = ["serde", "std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
sha2 = { workspace = true, features = ["std"] }
walkdir = { workspace = true }

[dev-dependencies]
async-std = { workspace = true, features = ["attributes", "default"] }
tempfile = { workspace = true }

[features]
default = []
server = ["axum", "futures/async-await", "headers"]
